# ORB-SLAM3-ROS2-Docker

./: .gitignore  Dockerfile  build_orb.sh  docker-compose.yml  ros_env_vars.sh  setup_camera.sh
container_root/: .bash_history  .bashrc  .gitconfig  .wget-hsts  Cameracalibration.md  bug.txt  calibrate.sh  calibrator.py  camera_calibration.json  image_converter.py  run_camera.sh  run_orbslam.sh  stereo_calibrator.py  stereo_depth_demo.py
container_root/.ros/: rtabmap.db
container_root/.ros/camera_info/: ov9281__base_axi_pcie_1000120000_rp1_i2c_80000_ov9281_60_640x400.yaml  ov9281__base_axi_pcie_1000120000_rp1_i2c_80000_ov9281_60_800x600.yaml
container_root/colcon_ws/: QUICK_START.md  SETUP_README.md  TROUBLESHOOTING.md  image_converter.py  run_mono8.sh  run_orbslam.sh  simple_vo.py  visualize_orb_slam3.py  web_visualization.py
container_root/colcon_ws/src/sati_ros_camera_stack/: README.md  package.xml  setup.cfg  setup.py
container_root/colcon_ws/src/sati_ros_camera_stack/examples/: frame_configurations.md  run_complete_stack.sh
container_root/colcon_ws/src/sati_ros_camera_stack/launch/: sati_camera_stack.launch.py  sati_orbslam_stack.launch.py
container_root/colcon_ws/src/sati_ros_camera_stack/sati_ros_camera_stack/: __init__.py  image_converter_node.py
container_root/log/: latest_build
orb_slam3_ros2_wrapper/: CMakeLists.txt  README.md
orb_slam3_ros2_wrapper/launch/: mono.launch.py  rgbd.launch.py
orb_slam3_ros2_wrapper/params/: arducam_mono.yaml  mono-ros-params.yaml
orb_slam3_ros2_wrapper/src/: orb_slam3_interface.cpp
(+24 files in other folders)
